<resources>
    <string name="app_name">SmartWallet</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="edit_transaction">Edit transaction</string>
    <string name="delete_transaction">Delete transaction</string>
    <string name="salary">Salary</string>
    <string name="_3000">+$3000</string>
    <string name="aug_1_2023">Aug 1, 2023</string>
    <string name="amount">Amount</string>
    <string name="description">Description</string>
    <string name="edit">Edit</string>
    <string name="delete">Delete</string>
    <string name="add_transaction">Add Transaction</string>
    <string name="add">Add</string>
    <string name="budget_0_00">Budget: $0.00</string>
    <string name="spent_0_00">Spent: $0.00</string>
    <string name="monthly_budget">Monthly Budget</string>
    <string name="set_budget">Set Budget</string>
    <string name="RView">BudgetList</string>
    <string name="select_currency">Select Currency</string>
    <string name="export_data">Export Data</string>
    <string name="import_data">Import Data</string>
    <string-array name="currency_array">
        <item>LKR</item>
        <item>USD</item>
        <item>EUR</item>
        <item>INR</item>
    </string-array>
</resources>